# portal-engine

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  Camera.h  GrpExtract.cpp  GrpExtract.h  LICENSE  Makefile  Map.cpp  Map.h  Player.cpp  Player.h  README.md  ROADMAP.md  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  Vec2.h  build_engine.c  main.cpp  map.txt  stb_image_impl.cpp
.claude/: settings.json
.claude/hooks/: format_cpp.sh
.github/: smoke-test.sh
.github/workflows/: release.yml
textures/: brick.ppm  panel.ppm  tiles.ppm
tools/: gen_textures.py  grp_extract.py
